service/tests/models/products/snapshots/product_variants/can_create_product_variant_successful@product_variants.snap
---
source: tests/models/products/product_variants.rs
expression: result
---
Ok(
    ProductVariant {
        id: ID,
        pid: PID,
        product_id: ID,
        sku: "BAG-LEATHER-STD",
        price: 129.99,
        stock_quantity: 15,
        is_default: false,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
