service/tests/models/products/snapshots/product_variants/cannot_create_product_variant_when_default_variant_exists@product_variants.snap
---
source: tests/models/products/product_variants.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Product already has a default variant.",
    ),
)
