service/tests/models/products/snapshots/product_variants/cannot_create_product_variant_when_product_does_not_exist@product_variants.snap
---
source: tests/models/products/product_variants.rs
expression: result
---
Err(
    InvalidReference(
        "Product does not exist.",
    ),
)
