service/tests/models/products/snapshots/product_variants/cannot_create_product_variant_when_sku_already_exists@product_variants.snap
---
source: tests/models/products/product_variants.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Product variant with this SKU already exists.",
    ),
)
