service/tests/models/products/snapshots/product_variants/cannot_create_product_variant_when_stock_is_negative@product_variants.snap
---
source: tests/models/products/product_variants.rs
expression: result
---
Err(
    InvalidInput(
        "Product variant stock quantity must be greater than or equal to zero.",
    ),
)
